LinkedResultTest fails now